# rag-knowledge-base

./: .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  test_qwen.py
backend/app/: config.py  main.py
backend/app/api/v1/: auth.py  chat.py  documents.py
backend/app/core/: deps.py  prompts.py  rag_service.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  chat.py  document.py  user.py
backend/app/schemas/: __init__.py  chat.py  document.py  user.py
frontend/: .evn.local  .gitignore  Dockerfile  package.json  pnpm-lock.yaml
frontend/src/app/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: ChatBox.tsx  FileUpload.tsx
frontend/src/lib/: api.ts  auth.ts
