[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "dashscope>=1.25.12",
    "fastapi>=0.134.0",
    "langchain-community>=0.4.1",
    "pgvector>=0.4.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.7.4",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "scalar-fastapi>=1.6.2",
    "sqlalchemy[asyncio]>=2.0.47",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
